# deskyrin

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  railway.json  vercel.json
app/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx
app/src/api/: client.ts  types.ts
app/src/components/: Layout.tsx  Logo.tsx  QrScanModal.tsx
app/src/hooks/: useReveal.ts
app/src/lib/: parseQrPayload.ts
app/src/pages/: CampaignDetail.tsx  Campaigns.tsx  Dashboard.tsx  Home.tsx  Login.tsx  PartnerStore.tsx  Register.tsx  Scan.tsx
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  config.ts  index.ts  types.ts
backend/src/crypto/: walletVault.ts
backend/src/db/: cast.ts  connection.ts  migrateUsers.ts
backend/src/middleware/: requireAdmin.ts  requireAuth.ts
backend/src/routes/: auth.ts  campaigns.ts  demo.ts  events.ts  partners.ts  qr.ts  rewards.ts  tokens.ts  users.ts  wallet.ts
backend/src/scripts/: seed.ts  verify-wallet-on-first-scan.ts
backend/src/services/: authService.ts  campaignService.ts  partnerService.ts  qrService.ts  stakingCurve.ts  stakingService.ts  userService.ts
backend/src/solana/: deskyrinStaking.ts  recyclingChain.ts
backend/src/types/: express.d.ts
frontend/: .env.example  index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  PrivateRoute.tsx  (+1 more)
programs/bbm/: Cargo.toml
programs/bbm/src/: lib.rs
scripts/: setupDeskyrinDevnet.cjs
tests/: recycling_program.ts
(+8 files in other folders)
