[package]
name = "recycling_program"
version = "0.1.0"
description = "Recycling bottle SPL + USDC rewards on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "recycling_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["associated_token", "token"] }
